📊 Relatório Semanal Automático - Semana 37 (14/09/2025)
  🤖 Relatório gerado automaticamente pelo GitHub Actions
  📅 Data: 14/09/2025
  📈 Semana: 37
  🔗 Acesso: latest-weekly-report

  - ✅ Novo relatório criado
  - 🔗 Links simbólicos atualizados
  - 📊 Dados extraídos dos KPIs atuais

--- a/reports/weekly/2025-09-14_Semana-37.md
+++ b/reports/weekly/2025-09-14_Semana-37.md
@@ -13,7 +13,7 @@
 
 ### 📋 Status Geral
 - **Total de Issues**: 30
-- **Issues Abertas**: 29  
+- **Issues Abertas**: 30  
 - **Issues Fechadas**: 30
 - **Taxa de Conclusão**: 100%
 
@@ -42,7 +42,8 @@
 - #2: 📚 Matemática Aplicada - 1º Semestre/2025
 
 ### 🆕 Novos Itens Planejados
-**7 novas issues criadas:**
+**8 novas issues criadas:**
+- #63: 🎯 Metas da Semana: 14/09/2025 a 21/09/2025
 - #62: 📚 LPIC-1 - Preparatório para os Exames 101 e 102 - Udemy
 - #61: 📚 Certified in Cybersecurity Online Self-Paced Training - ISC2
 - #60: 📚 Certificação Cisco Certified CCNA 200-301 - Udemy
